examples/test/testpolicy13820.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13820
  namespace: namespace61
spec:
  podSelector:
    matchLabels:
      key14: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value37
          key2: value1
          key3: value4
      podSelector:
        matchLabels:
          key22: value4
          key7: value8
          key21: value21
